Implement SSL config reloading for the netty http client (#9218)
* Implement SSL config reloading for the netty http client
NettyHttpServer also apparently didn't reload when changing the micronaut.ssl configuration, so I fixed that too.

Likely fixes #7873

* Apply suggestions from code review

Co-authored-by: Tim Yates <tim.yates@gmail.com>

* fix compile error

---------

Co-authored-by: Tim Yates <tim.yates@gmail.com>